fix mobile size and image metadata not showing

--- a/styles/BoardTitle.module.css
+++ b/styles/BoardTitle.module.css
@@ -3,4 +3,5 @@
     font-family: Tahoma,sans-serif;
     font-weight: 700;
     margin: 1rem 0;
+    text-align: center;
 }
