--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -11,7 +11,7 @@
 }
 
 .thread {
-    width: 180px;
+    width: 150px;
     margin:1em;
 
     display:flex;
@@ -22,11 +22,11 @@
 
 .thread .title {
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .thread .headline {
-    font-size: 1rem;
+    font-size: .9rem;
 
 }
 
@@ -43,8 +43,9 @@
 
 .startnewthreadbtn {
     color: blue;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight:bold;
+    text-align: center;
 }
 .startnewthreadbtn:hover {
     color: red;
@@ -146,3 +147,24 @@
     border-radius: 5px;
 }
 
+.postcount {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    border-style: solid; 
+    border-width: 1px 0;
+    border-color: rgb(6, 6, 6,.2);
+}
+
+.postreplybtn {
+    color: #81a2be;
+    margin: .5rem;
+    font-size: 1rem;
+}
+
+.postreplybtn:hover {
+    color: blue;
+    cursor: pointer;
+}
