--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,8 @@
 .main {
     background-image: linear-gradient(to bottom,salmon -10%, white 20%);
     width:100vw;
-    height:100vh;
+    height:100%;
+    min-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     display:flex;
     flex-direction: column;
@@ -14,9 +15,16 @@
 .boards {
     width: 800px;
     max-height: 600px;
+    margin-bottom: 1rem;
     outline: 1px solid salmon;
 
     grid-template-rows: 3em 1fr;
+}
+
+@media screen and (max-width:800px) {
+    .boards {
+        width:90vw;
+    }
 }
 
 .boards .title {
